worker-cluster/resources/default/app/app-as-a-service-demo/resource-configure/5058f/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: app-as-a-service-demo
  name: app-as-a-service-demo
  namespace: default
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: app-as-a-service-demo
  type: NodePort
status:
  loadBalancer: {}
