worker-cluster/resources/default/app/app-as-a-service-demo/resource-configure/5058f/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: app-as-a-service-demo
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: app-as-a-service-demo.local.gd
    http:
      paths:
      - backend:
          service:
            name: app-as-a-service-demo
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
